force-app/main/default/objects/PRODUCT__c/PRODUCT__c.object-meta.xml
<CustomObject>
    <label>Products.</label>
    <nameField>
        <displayFormat>PD-{000000}</displayFormat>
        <label>PRODUCT ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products.</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>