force-app/main/default/objects/PRODUCT__c/fields/AvailablePlanType__c.field-meta.xml
<CustomField>
    <fullName>AvailablePlanType__c</fullName>
    <label>Available Plan Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AvailablePlanType</valueSetName>
    </valueSet>
</CustomField>