force-app/main/default/objects/PRODUCT__c/fields/BarCodeImage__c.field-meta.xml
<CustomField>
    <fullName>BarCodeImage__c</fullName>
    <inlineHelpText>Please take a picture of Barcode on product and attach image of Barcode.</inlineHelpText>
    <label>Barcode Photo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>