force-app/main/default/objects/PRODUCT__c/fields/BarCodeText__c.field-meta.xml
<CustomField>
    <fullName>BarCodeText__c</fullName>
    <label>BAR CODE TEXT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>