force-app/main/default/objects/PRODUCT__c/fields/BillingType__c.field-meta.xml
<CustomField>
    <fullName>BillingType__c</fullName>
    <label>BILLING TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BillingType</valueSetName>
    </valueSet>
</CustomField>