force-app/main/default/objects/PRODUCT__c/fields/BuyingCommercialValuePerUnitLocal__c.field-meta.xml
<CustomField>
    <fullName>BuyingCommercialValuePerUnitLocal__c</fullName>
    <label>BUYING COMMERCIAL VALUE PER UNIT(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>