force-app/main/default/objects/PRODUCT__c/fields/BuyingCommercialValuePerUnitUSD__c.field-meta.xml
<CustomField>
    <fullName>BuyingCommercialValuePerUnitUSD__c</fullName>
    <inlineHelpText>Buying Unit Price(FCY)=CIF Price(FCY)+Import Tax Amount(FCY) Per Product</inlineHelpText>
    <label>BUYING COMMERCIAL VALUE PER UNIT(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>