force-app/main/default/objects/PRODUCT__c/fields/BuyingUnitPriceLocalKg__c.field-meta.xml
<CustomField>
    <fullName>BuyingUnitPriceLocalKg__c</fullName>
    <label>BUYING UNIT PRICE(LOCAL)/Kg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>