force-app/main/default/objects/PRODUCT__c/fields/BuyingWeightUnit__c.field-meta.xml
<CustomField>
    <fullName>BuyingWeightUnit__c</fullName>
    <label>BUYING WEIGHT UNIT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WeightUnit</valueSetName>
    </valueSet>
</CustomField>