force-app/main/default/objects/PRODUCT__c/fields/CIFPriceFCY__c.field-meta.xml
<CustomField>
    <fullName>CIFPriceFCY__c</fullName>
    <inlineHelpText>CIF Price(FCY)=Product Price(FCY)+Freight &amp; Insurance Costs(FCY)</inlineHelpText>
    <label>CIF Price(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>