force-app/main/default/objects/PRODUCT__c/fields/CodeImageType__c.field-meta.xml
<CustomField>
    <fullName>CodeImageType__c</fullName>
    <label>Code Image Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CodeImageType</valueSetName>
    </valueSet>
</CustomField>