force-app/main/default/objects/PRODUCT__c/fields/Cube__c.field-meta.xml
<CustomField>
    <fullName>Cube__c</fullName>
    <label>CUBE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>