force-app/main/default/objects/PRODUCT__c/fields/DeliveryServiceAvailable__c.field-meta.xml
<CustomField>
    <fullName>DeliveryServiceAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Service Available?</label>
    <type>Checkbox</type>
</CustomField>