force-app/main/default/objects/PRODUCT__c/fields/DeliveryServiceBillingFreq__c.field-meta.xml
<CustomField>
    <fullName>DeliveryServiceBillingFreq__c</fullName>
    <label>Delivery Service Billing Freq</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DeliveryServiceBillingFreqType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>