force-app/main/default/objects/PRODUCT__c/fields/DeliveryServiceBillingFreqType__c.field-meta.xml
<CustomField>
    <fullName>DeliveryServiceBillingFreqType__c</fullName>
    <label>Delivery Service Billing Freq Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BillingFrequencyType</valueSetName>
    </valueSet>
</CustomField>