force-app/main/default/objects/PRODUCT__c/fields/DeliveryServiceCharge__c.field-meta.xml
<CustomField>
    <fullName>DeliveryServiceCharge__c</fullName>
    <label>Delivery Service Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>