force-app/main/default/objects/PRODUCT__c/fields/Depth__c.field-meta.xml
<CustomField>
    <fullName>Depth__c</fullName>
    <label>LENGTH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>