force-app/main/default/objects/PRODUCT__c/fields/DownGradeClassification__c.field-meta.xml
<CustomField>
    <fullName>DownGradeClassification__c</fullName>
    <label>DOWNGRADE CLASSIFICATION</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DownGradeClassification</valueSetName>
    </valueSet>
</CustomField>