force-app/main/default/objects/PRODUCT__c/fields/DowngradeFactor__c.field-meta.xml
<CustomField>
    <fullName>DowngradeFactor__c</fullName>
    <label>DOWNGRADE FACTOR</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DowngradeFactor</valueSetName>
    </valueSet>
</CustomField>