force-app/main/default/objects/PRODUCT__c/fields/ExpireSettingRule__c.field-meta.xml
<CustomField>
    <fullName>ExpireSettingRule__c</fullName>
    <label>Expire Setting Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ExpireSettingRule</valueSetName>
    </valueSet>
</CustomField>