force-app/main/default/objects/PRODUCT__c/fields/ExternalProduct_ID__c.field-meta.xml
<CustomField>
    <fullName>ExternalProduct_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Product ID from Integration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>