force-app/main/default/objects/PRODUCT__c/fields/FoodCategory__c.field-meta.xml
<CustomField>
    <fullName>FoodCategory__c</fullName>
    <label>FOOD CATEGORY</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ProductCategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>FoodCategory</valueSetName>
    </valueSet>
</CustomField>