force-app/main/default/objects/PRODUCT__c/fields/FoodSubCategory__c.field-meta.xml
<CustomField>
    <fullName>FoodSubCategory__c</fullName>
    <label>FOOD SUB-CATEGORY</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FoodCategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>FoodSubCategory</valueSetName>
    </valueSet>
</CustomField>