force-app/main/default/objects/PRODUCT__c/fields/FreightInsuranceCostsFCY__c.field-meta.xml
<CustomField>
    <fullName>FreightInsuranceCostsFCY__c</fullName>
    <label>Freight &amp; Insurance Costs(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>