force-app/main/default/objects/PRODUCT__c/fields/GeneratedBarcode__c.field-meta.xml
<CustomField>
    <fullName>GeneratedBarcode__c</fullName>
    <formula>IMAGE(&quot;//www.barcodesinc.com/generator/image.php?code=&quot;&amp; QR_Code__c &amp;&quot;&amp;style=325&amp;type=C39&amp;width=100&amp;height=50&amp;xres=1&amp;font=3&quot;,QR_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GeneratedBarcode</label>
    <type>Text</type>
</CustomField>