force-app/main/default/objects/PRODUCT__c/fields/GoodOwner__c.field-meta.xml
<CustomField>
    <fullName>GoodOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GOODS OWNER</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PRODUCTS</relationshipLabel>
    <relationshipName>PRODUCTS</relationshipName>
    <type>Lookup</type>
</CustomField>