force-app/main/default/objects/PRODUCT__c/fields/GoodsDetail__c.field-meta.xml
<CustomField>
    <fullName>GoodsDetail__c</fullName>
    <label>GOODS DETAIL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>