force-app/main/default/objects/PRODUCT__c/fields/GrossWeight__c.field-meta.xml
<CustomField>
    <fullName>GrossWeight__c</fullName>
    <label>GROSS WEIGHT</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>