force-app/main/default/objects/PRODUCT__c/fields/GuaranteeServiceAvailable__c.field-meta.xml
<CustomField>
    <fullName>GuaranteeServiceAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guarantee Service Available?</label>
    <type>Checkbox</type>
</CustomField>