force-app/main/default/objects/PRODUCT__c/fields/GuaranteeServiceBillingFreq__c.field-meta.xml
<CustomField>
    <fullName>GuaranteeServiceBillingFreq__c</fullName>
    <label>Guarantee Service Billing Freq</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>GuaranteeServiceBillingFreqType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>