force-app/main/default/objects/PRODUCT__c/fields/GuaranteeServiceCharge__c.field-meta.xml
<CustomField>
    <fullName>GuaranteeServiceCharge__c</fullName>
    <label>Guarantee Service Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>