force-app/main/default/objects/PRODUCT__c/fields/HSCode__c.field-meta.xml
<CustomField>
    <fullName>HSCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HS CODE</label>
    <referenceTo>HS_Code__c</referenceTo>
    <relationshipLabel>PRODUCTS</relationshipLabel>
    <relationshipName>PRODUCTS</relationshipName>
    <type>Lookup</type>
</CustomField>