force-app/main/default/objects/PRODUCT__c/fields/ImportTaxRatio__c.field-meta.xml
<CustomField>
    <fullName>ImportTaxRatio__c</fullName>
    <label>Import Tax Ratio(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>