force-app/main/default/objects/PRODUCT__c/fields/InventoryType__c.field-meta.xml
<CustomField>
    <fullName>InventoryType__c</fullName>
    <label>INVENTORY TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>InventoryType</valueSetName>
    </valueSet>
</CustomField>