force-app/main/default/objects/PRODUCT__c/fields/MaintenanceServiceAvailable__c.field-meta.xml
<CustomField>
    <fullName>MaintenanceServiceAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maintenance Service Available?</label>
    <type>Checkbox</type>
</CustomField>