force-app/main/default/objects/PRODUCT__c/fields/MaintenanceServiceCharge__c.field-meta.xml
<CustomField>
    <fullName>MaintenanceServiceCharge__c</fullName>
    <label>Maintenance Service Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>