force-app/main/default/objects/PRODUCT__c/fields/MaintenanceServiceDetail__c.field-meta.xml
<CustomField>
    <fullName>MaintenanceServiceDetail__c</fullName>
    <label>Maintenance Service Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>