force-app/main/default/objects/PRODUCT__c/fields/ManufactureQRImage__c.field-meta.xml
<CustomField>
    <fullName>ManufactureQRImage__c</fullName>
    <formula>Manufacturer__r.AccountQRcodeImage__c</formula>
    <label>Manufacturer QR/Barcode Image</label>
    <type>Text</type>
</CustomField>