force-app/main/default/objects/PRODUCT__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MANUFACTURER</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PRODUCTS (MANUFACTURER)</relationshipLabel>
    <relationshipName>Manufacturer</relationshipName>
    <type>Lookup</type>
</CustomField>