force-app/main/default/objects/PRODUCT__c/fields/ManufacturerProductDetail__c.field-meta.xml
<CustomField>
    <fullName>ManufacturerProductDetail__c</fullName>
    <label>Manufacturer Product Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>