force-app/main/default/objects/PRODUCT__c/fields/ManufacturerProductDetailURL__c.field-meta.xml
<CustomField>
    <fullName>ManufacturerProductDetailURL__c</fullName>
    <label>Manufacturer Product Detail URL</label>
    <type>Url</type>
</CustomField>