force-app/main/default/objects/PRODUCT__c/fields/MaxDiscountRate__c.field-meta.xml
<CustomField>
    <fullName>MaxDiscountRate__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Max Discount Rate%=(Standard Selling Unit Price(Local)-Min Selling Unit Price(Local)/Standard Selling Unit Price(Local)*100</inlineHelpText>
    <label>Max Discount Rate%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>