force-app/main/default/objects/PRODUCT__c/fields/MaxSellingUnitPriceUSD__c.field-meta.xml
<CustomField>
    <fullName>MaxSellingUnitPriceUSD__c</fullName>
    <label>MAX SELLING UNIT PRICE(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>