force-app/main/default/objects/PRODUCT__c/fields/Measurement__c.field-meta.xml
<CustomField>
    <fullName>Measurement__c</fullName>
    <inlineHelpText>= cubic inch/61023.744 or cubic feet/35.315 or cubic yard/1.308</inlineHelpText>
    <label>MEASUREMENT(CBM)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>