force-app/main/default/objects/PRODUCT__c/fields/NegativeAdjustQuantityTolerance__c.field-meta.xml
<CustomField>
    <fullName>NegativeAdjustQuantityTolerance__c</fullName>
    <label>Negative Adjustment Quantity Tolerance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>