force-app/main/default/objects/PRODUCT__c/fields/NegativeQuantityTolerance__c.field-meta.xml
<CustomField>
    <fullName>NegativeQuantityTolerance__c</fullName>
    <label>Negative Adjustment Quantity Toler(Old)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>