force-app/main/default/objects/PRODUCT__c/fields/NegativeValueTolerance__c.field-meta.xml
<CustomField>
    <fullName>NegativeValueTolerance__c</fullName>
    <label>Negative Adjustment Value Tolerance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>