force-app/main/default/objects/PRODUCT__c/fields/NETWeightGram__c.field-meta.xml
<CustomField>
    <fullName>NETWeightGram__c</fullName>
    <label>NET WEIGHT(g)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>