force-app/main/default/objects/PRODUCT__c/fields/NewOrUsed__c.field-meta.xml
<CustomField>
    <fullName>NewOrUsed__c</fullName>
    <label>New or Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NewOrUsed</valueSetName>
    </valueSet>
</CustomField>