force-app/main/default/objects/PRODUCT__c/fields/NumberOfDayTillBestBefore__c.field-meta.xml
<CustomField>
    <fullName>NumberOfDayTillBestBefore__c</fullName>
    <label>NUMBER OF DAY TILL BEST BEFORE DATE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>