force-app/main/default/objects/PRODUCT__c/fields/OriginCountry__c.field-meta.xml
<CustomField>
    <fullName>OriginCountry__c</fullName>
    <label>Origin Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CountryList</valueSetName>
    </valueSet>
</CustomField>