force-app/main/default/objects/PRODUCT__c/fields/PartNumber__c.field-meta.xml
<CustomField>
    <fullName>PartNumber__c</fullName>
    <label>PART NUMBER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>