force-app/main/default/objects/PRODUCT__c/fields/PositivePercentageTolerance__c.field-meta.xml
<CustomField>
    <fullName>PositivePercentageTolerance__c</fullName>
    <label>Positive Adjustment Percentage Tolerance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>