force-app/main/default/objects/PRODUCT__c/fields/PriceClassification__c.field-meta.xml
<CustomField>
    <fullName>PriceClassification__c</fullName>
    <label>PRICE CLASSIFICATION</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PriceClassification</valueSetName>
    </valueSet>
</CustomField>