force-app/main/default/objects/PRODUCT__c/fields/ProductCodeLevel2__c.field-meta.xml
<CustomField>
    <fullName>ProductCodeLevel2__c</fullName>
    <label>Product Code(Level 2)</label>
    <length>254</length>
    <type>Text</type>
</CustomField>