force-app/main/default/objects/PRODUCT__c/fields/ProductPriceFCY__c.field-meta.xml
<CustomField>
    <fullName>ProductPriceFCY__c</fullName>
    <inlineHelpText>Cost of product purchasing</inlineHelpText>
    <label>Product Price(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>