force-app/main/default/objects/PRODUCT__c/fields/ProductScaleCode__c.field-meta.xml
<CustomField>
    <fullName>ProductScaleCode__c</fullName>
    <label>PRODUCT SCALE CODE</label>
    <length>5</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>