force-app/main/default/objects/PRODUCT__c/fields/ProductSourcingType__c.field-meta.xml
<CustomField>
    <fullName>ProductSourcingType__c</fullName>
    <label>Product Sourcing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductSourcingType</valueSetName>
    </valueSet>
</CustomField>