force-app/main/default/objects/PRODUCT__c/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <formula>IF(ISBLANK(External_ID__c), Name, External_ID__c)</formula>
    <inlineHelpText>Manufacture Code will be set as default. If there is no Manufacture Code, the Product ID will be set.</inlineHelpText>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>