force-app/main/default/objects/PRODUCT__c/fields/QR_Image__c.field-meta.xml
<CustomField>
    <fullName>QR_Image__c</fullName>
    <formula>IF( Text(CodeImageType__c)=&quot;Barcode&quot;,
IMAGE(&quot;https://www.scandit.com/wp-content/themes/bridge-child/wbq_barcode_gen.php?symbology=code128&amp;value=&quot;+QR_Code__c +&quot;&amp;size=80&amp;ec=L&quot;,QR_Code__c), IMAGE(&apos;https://chart.googleapis.com/chart?chs=100x100&amp;cht=qr&amp;chl=&apos; + QR_Code__c, &apos;Product QR Code&apos; ))</formula>
    <inlineHelpText>Code Text will be automatically converted to either QR image or Barcode image base on Code Image Type.</inlineHelpText>
    <label>Code Image in Document</label>
    <type>Text</type>
</CustomField>