force-app/main/default/objects/PRODUCT__c/fields/QRCodeImage__c.field-meta.xml
<CustomField>
    <fullName>QRCodeImage__c</fullName>
    <formula>IMAGE(&apos;https://chart.googleapis.com/chart?chs=75x75&amp;cht=qr&amp;chl=&apos; + QR_Code__c, &apos;Product QR Code&apos; )</formula>
    <inlineHelpText>Code Text will be automatically converted to QR image.</inlineHelpText>
    <label>QR Code Image</label>
    <type>Text</type>
</CustomField>