force-app/main/default/objects/PRODUCT__c/fields/QuantityPerUnit__c.field-meta.xml
<CustomField>
    <fullName>QuantityPerUnit__c</fullName>
    <label>QUANTITY PER UNIT</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>