force-app/main/default/objects/PRODUCT__c/fields/RelocationServiceAvailable__c.field-meta.xml
<CustomField>
    <fullName>RelocationServiceAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Relocation  Service Available?</label>
    <type>Checkbox</type>
</CustomField>