force-app/main/default/objects/PRODUCT__c/fields/RelocationServiceBillingFreq__c.field-meta.xml
<CustomField>
    <fullName>RelocationServiceBillingFreq__c</fullName>
    <label>Relocation Service Billing Freq</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RelocationServiceBillingFreqType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>