force-app/main/default/objects/PRODUCT__c/fields/RelocationServiceCharge__c.field-meta.xml
<CustomField>
    <fullName>RelocationServiceCharge__c</fullName>
    <label>Relocation  Service Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>