force-app/main/default/objects/PRODUCT__c/fields/RelocationServiceDetail__c.field-meta.xml
<CustomField>
    <fullName>RelocationServiceDetail__c</fullName>
    <label>Relocation  Service Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>