force-app/main/default/objects/PRODUCT__c/fields/ReplacementServiceBillingFreq__c.field-meta.xml
<CustomField>
    <fullName>ReplacementServiceBillingFreq__c</fullName>
    <label>Replacement Service Billing Freq</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ReplacementServiceBillingFreqType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>