force-app/main/default/objects/PRODUCT__c/fields/ReturnPolicyType__c.field-meta.xml
<CustomField>
    <fullName>ReturnPolicyType__c</fullName>
    <label>RETURN POLICY TYPE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Return Damaged</fullName>
                <default>true</default>
                <label>Return Damaged</label>
            </value>
            <value>
                <fullName>No Return</fullName>
            </value>
            <value>
                <fullName>All Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>