force-app/main/default/objects/PRODUCT__c/fields/RollupMTRBuyUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupMTRBuyUnitPriceLocal__c</fullName>
    <label>ROLLUP MTR BUYING UNIT PRICE(LOCAL)</label>
    <summarizedField>MTRSVCProductPricing__c.MaterialBuyingUnitPriceLocal__c</summarizedField>
    <summaryForeignKey>MTRSVCProductPricing__c.ProductID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>