force-app/main/default/objects/PRODUCT__c/fields/RollupMTRBuyUnitPriceUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupMTRBuyUnitPriceUSD__c</fullName>
    <label>ROLLUP MTR BUYING UNIT PRICE(FCY)</label>
    <summarizedField>MTRSVCProductPricing__c.MaterialBuyingUnitPriceUSD__c</summarizedField>
    <summaryForeignKey>MTRSVCProductPricing__c.ProductID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>