force-app/main/default/objects/PRODUCT__c/fields/RollupMTRSellUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupMTRSellUnitPriceLocal__c</fullName>
    <label>ROLLUP MTR SELLING UNIT PRICE(LOCAL)</label>
    <summarizedField>MTRSVCProductPricing__c.MaterialSellingUnitPriceLocal__c</summarizedField>
    <summaryForeignKey>MTRSVCProductPricing__c.ProductID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>