force-app/main/default/objects/PRODUCT__c/fields/RollupStockIn__c.field-meta.xml
<CustomField>
    <fullName>RollupStockIn__c</fullName>
    <label>ROLLUP STOCK-IN</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>