force-app/main/default/objects/PRODUCT__c/fields/RollupSVCSellUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupSVCSellUnitPriceLocal__c</fullName>
    <label>ROLLUP SVC SELLING UNIT PRICE(LOCAL)</label>
    <summarizedField>MTRSVCProductPricing__c.SVCSellingUnitPriceLocal__c</summarizedField>
    <summaryForeignKey>MTRSVCProductPricing__c.ProductID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>