force-app/main/default/objects/PRODUCT__c/fields/SecondProductName__c.field-meta.xml
<CustomField>
    <fullName>SecondProductName__c</fullName>
    <label>SECONDARY PRODUCT NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>