force-app/main/default/objects/PRODUCT__c/fields/SellingCommercialValuePerUnitLocal__c.field-meta.xml
<CustomField>
    <fullName>SellingCommercialValuePerUnitLocal__c</fullName>
    <label>DELETED-SELLING VALUE PER UNIT(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>