force-app/main/default/objects/PRODUCT__c/fields/SellingCommercialValuePerUnitUSD__c.field-meta.xml
<CustomField>
    <fullName>SellingCommercialValuePerUnitUSD__c</fullName>
    <label>SELLING COMMERCIAL VALUE PER UNIT(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>