force-app/main/default/objects/PRODUCT__c/fields/SellingUnitPriceFCYKg__c.field-meta.xml
<CustomField>
    <fullName>SellingUnitPriceFCYKg__c</fullName>
    <label>SELLING UNIT PRICE(FCY)/Kg</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>