force-app/main/default/objects/PRODUCT__c/fields/SellingUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>SellingUnitPriceLocal__c</fullName>
    <label>SELLING UNIT PRICE(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>