force-app/main/default/objects/PRODUCT__c/fields/SellingUnitPriceLocalKg__c.field-meta.xml
<CustomField>
    <fullName>SellingUnitPriceLocalKg__c</fullName>
    <label>SELLING UNIT PRICE(LOCAL)/Kg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>