force-app/main/default/objects/PRODUCT__c/fields/SetupServiceAvailable__c.field-meta.xml
<CustomField>
    <fullName>SetupServiceAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Setup Service Available?</label>
    <type>Checkbox</type>
</CustomField>