force-app/main/default/objects/PRODUCT__c/fields/SetupServiceCharge__c.field-meta.xml
<CustomField>
    <fullName>SetupServiceCharge__c</fullName>
    <label>Setup Service Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>