force-app/main/default/objects/PRODUCT__c/fields/SetupServiceDetail__c.field-meta.xml
<CustomField>
    <fullName>SetupServiceDetail__c</fullName>
    <label>Setup Service Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>