force-app/main/default/objects/PRODUCT__c/fields/ShelfLifeDay__c.field-meta.xml
<CustomField>
    <fullName>ShelfLifeDay__c</fullName>
    <label>SHELF LIFE(DAY)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>