force-app/main/default/objects/PRODUCT__c/fields/SKUNumber__c.field-meta.xml
<CustomField>
    <fullName>SKUNumber__c</fullName>
    <label>Product SKU Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>